# rsnn

./: .gitignore  LICENSE.txt  pyproject.toml  setup.cfg
notebooks/: causal_events.ipynb  continuous_offline_optimization_with_dz.ipynb  dev.ipynb  draft.ipynb  energy_based_optimization.ipynb  energy_based_optimization_copy.ipynb  event_energy_offline_optimization.ipynb  event_offline_optimization.ipynb  gurobi.ipynb  jitter_propagation.ipynb  learning.ipynb  network.ipynb  network_learning.ipynb  neuron_learning.ipynb  optim.ipynb  spike_trains.ipynb  spike_trains_old.ipynb  template_based_optimization.ipynb
notebooks/new/: optim.ipynb
src/rsnn/: __init__.py  channels.py  constants.py  jitters.py  log.py  metrics.py  optim.py  optim_grb.py  rand.py  sim.py  spikes.py  states.py  utils.py
src/rsnn/core/: file_io.py  network.py  neuron.py  rsnn.py  utils.py
src/rsnn/learning/: gmp.py  grb.py  neuron.py  utils.py
src/rsnn/new/: constants.py  jitters.py  log.py  metrics.py  optim.py  rand.py  sim.py  utils.py
src/rsnn/optim/: __init__.py  energy_based.py  integral_based.py  jitters.py  naive.py  nrg.py  solver.py  svm.py  template_based.py  utils.py
src/rsnn/rand/: spikes.py  synapses.py
src/rsnn/sim/: measure.py  neuron.py  sim.py  sim_dev.py  sim_numba.py  sim_serialize.py  update.py  utils.py
tests/: RSNN.code-workspace  test_jitters.py  test_learning_gmp.py  test_learning_grb.py  test_learning_neuron.py  test_learning_utils.py  test_metrics.py  test_network.py  test_neuron.py  test_optim.py  test_rand.py  test_sim.py  test_utils.py
(+1 files in other folders)
