[metadata]
name = rsnn
version = 2.0.0
author = Hugo Aguettaz
description = Recurrent Spiking Neural Network
long_description = A package for recurrent spiking neural networks (RSNN) in Python.
license_files = LICENSE.txt

[options]
python_requires = >=3.13
install_requires = 
    numpy
    tqdm
    scipy
    gurobipy
    matplotlib
    polars
    maturin
    numba

[options.extras_require]
test = 
    pytest